<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="provider">com.moa.tasktimer.provider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="description">Description</string>
    <string name="sortorder">Sortorder</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="sortOrder_hint">order: sort low to high</string>
    <string name="description_hint">Description (optional)</string>
    <string name="name_hint">Name (required)</string>
    <string name="instruction_heading">Instruction</string>
    <string name="description_heading">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">ok\n</string>
    <string name="cancel">Cancel</string>
    <string name="deldialog_message">Deleting this will also delete all the timings associated with task with id %1$d: %2$s</string>
    <string name="delDialog_positive_caption">Delete</string>
    <string name="edit_confirmation_message">Do you want to quit adding or editing task</string>
    <string name="exit_without_saving">exit without saving</string>
    <string name="continue_editing">continue editing</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="copyright">Copyright © 2024</string>
    <string name="instructions_available_at_www_moa_com">Instructions available at www.moa.com</string>
    <string name="for_support_contact_moazzamparwe40_gmail_com">For support, contact moazzamparwez40@gmail.com</string>
    <string name="textview">TextView</string>
    <string name="cancel_Button_text" tools:ignore="ButtonCase">CANCEL</string>
    <string name="ok_button_text">OK</string>
    <string name="settings">Settings</string>
    <string name="no_task_selected">No Task Selected</string>
    <string name="task_timing">Current Task Timing: %1$s</string>
    <string name="task_name">Task name</string>
    <string name="start_date">Start date</string>
    <string name="duration">Duration</string>
    <string name="task_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="rm_period_day">"Show day report "</string>
    <string name="re_period_week">Show week report</string>
    <string name="rm_period_week">Show week report</string>
    <string name="rm_date_report">Show report date</string>
    <string name="rm_delete_report">Delete reports</string>
    <string name="select_date_for_report">Select date for report</string>
</resources>