<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rm_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_filter_7_24"
        android:title="@string/rm_period_week"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_date_range_24"
        android:title="@string/rm_date_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rm_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/rm_delete_report"
        app:showAsAction="collapseActionView" />
</menu>